<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="edu.fsu.cs.mobile.audioember.Search_by_Genre">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/Back"
            android:text="Back"
            android:background="@drawable/button_border"
            android:fontFamily="@font/audiowide2"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"/>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/Pop"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Pop"
            android:background="@drawable/button_border"
            android:fontFamily="@font/audiowide2"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/Hip-Hop"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/RnB"
            tools:layout_editor_absoluteY="19dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/audiowide2"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/Top100"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Hot100"
            android:background="@drawable/button_border"
            android:fontFamily="@font/audiowide2"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/Rock"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Rock"
            android:background="@drawable/button_border"
            android:fontFamily="@font/audiowide2"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/DCP"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/DCP"
            android:background="@drawable/button_border"
            android:fontFamily="@font/audiowide2"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/Country"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Country"
            android:background="@drawable/button_border"
            android:fontFamily="@font/audiowide2"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@android:color/holo_blue_bright"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
